Check the original resource request for device